# ros3d-upnp

./: Makefile.am  README.rst  configure.ac  device.xml  setup.py  upnp.py
ros3dupnp/: __init__.py  cmd.py
src/: main.vala  upnpdevice.vala
